# opencl

./: CMakeLists.txt  README.md  mandelbrot.c  mandelbrot.cl  opencl_fft_example.c  opencl_utils.c  opencl_utils.h  query.c
owl/: CMakeLists.txt  owl_errno.h  owl_error.c  owl_fft.c  owl_fft.cl  owl_fft.h  owl_opencl.c  owl_opencl.h
